[package]
name = "cert-client"
version = "0.1.0"
authors = ["Ryan Koppenhaver <ryan.koppenhaver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.42.0"
rusoto_lambda = "0.42.0"
bytes = "0.4.12" # dep of rusoto_lambda, TODO how to not manually specify this
rusoto_s3 = "0.42.0"
serde_json = "1.0.48"
error-chain = "0.12.2"
